[tool.poetry]
name = "api-gateway"
version = "0.1.0"
description = ""
authors = ["EliseyGodX"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
patisson-applauncher = { git = "https://github.com/Patisson-Company/_AppLauncher", extras = [
    "async_fastapi_pack",
] }
fastapi = "^0.115.6"
python-dotenv = "^1.0.1"
patisson-request = { git = "https://github.com/Patisson-Company/_Request" }
websockets = "^14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
